--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
+    "ng2-datepicker": "^3.1.1",
     "ngx-mask": "^7.9.6",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
